Improved the user profile specification/dtos/controller
